# chatcommons

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: friends-alpha.yml
apps/client-ui/: index.html  package-lock.json  package.json
apps/client-ui/src/: App.tsx  adapter.ts  domain.ts  i18n.test.ts  i18n.ts  main.tsx  review-overlay.ts  styles.css
apps/client-ui/src/adapters/: demo.test.ts  demo.ts  tauri.ts
apps/desktop/: Cargo.toml  README.md
apps/desktop/packaging/: Info.plist
apps/desktop/src/: main.rs
apps/review-prototype/: README.md  server.py  test_frontend.py  test_server.py
apps/review-prototype/deploy/: chatcommons-review.env.example  chatcommons-review.service  nginx-chatcommons-location.conf  nginx-locations.conf  nginx-ttinker-site.conf  ttinker-chatcommons-review.env.example  ttinker-chatcommons-review.service
apps/review-prototype/public/: admin.css  admin.html  admin.js  app.js  i18n.js  index.html  review.css  review.js  styles.css  version.json
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  state.rs
crates/cli/tests/: chat_commands.rs  home_server.rs  invite_bootstrap.rs  state.rs  two_process_sync.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/node-core/: Cargo.toml
crates/node-core/src/: lib.rs
crates/node-core/tests/: core_node.rs
crates/profile-chat/: Cargo.toml
crates/profile-chat/src/: lib.rs
crates/profile-chat/tests/: chat_v1.rs  chat_v2.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/tests/: core_v2.rs
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: archive.rs  lib.rs
crates/storage/tests/: archive.rs
crates/sync/: Cargo.toml
crates/sync/src/: auth.rs  bootstrap.rs  lib.rs  network.rs
crates/sync/tests/: device_auth.rs  quic_sync.rs  relay_sync.rs  sync_flow.rs
deploy/: README.md
deploy/systemd/: chatcommons-home-server.env.example  chatcommons-home-server@.service
docs/: product-brief.md  protocol.md  roadmap.md  versioning.md
docs/adr/: 0001-m1-event-and-authority-model.md  0002-governance-without-global-control.md  0003-bounded-input-and-pending-events.md  0004-deterministic-authorization-resolution.md  0005-candidate-events-and-projection-storage.md  0006-community-owner-and-administrators.md  0007-less-is-more-core-profile-boundary.md  0008-adaptive-peer-assisted-screen-sharing.md  0009-transport-independent-event-sync.md  0010-user-and-device-key-separation.md  0011-minimal-direct-quic-sync.md  0012-single-use-bearer-invitations.md  0013-durable-communities-and-temporary-sessions.md  0014-m2c-diagnostic-node.md  0015-secure-invitation-bootstrap.md  0016-relay-assisted-hole-punching.md  0017-replaceable-community-home-server.md  0018-minimal-community-home-server.md  0019-bounded-community-archives-and-declared-dialing.md  0020-private-home-server-runtime-boundaries.md  0021-private-server-snapshots.md  0022-friends-alpha-desktop-and-server-bootstrap.md  0023-private-friends-alpha-feedback.md  0024-single-client-ui-source.md
docs/design/: compact-density-feedback-2026-07-21.md  home-feedback-2026-07-20.md  manual-feedback-2026-07-22.md
docs/governance/: china-launch-checklist.md  contributor-recognition.md  control-boundaries.md  engineering-gates.md
docs/operations/: friends-alpha.md
docs/security/: threat-model.md
docs/test-vectors/: core-v2-genesis.json  genesis-v1.json
