[package]
name = "chatcommons-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chatcommons-desktop"
path = "src/main.rs"

[dependencies]
directories.workspace = true
eframe.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
