[package]
name = "chatcommons-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chatcommons-desktop"
path = "src/main.rs"

[dependencies]
directories.workspace = true
eframe.workspace = true
base64.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { version = "3.1", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
