[package]
name = "chatcommons-node-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chatcommons-crypto = { path = "../crypto" }
chatcommons-protocol = { path = "../protocol" }
chatcommons-storage = { path = "../storage" }
thiserror.workspace = true

[dev-dependencies]
blake3.workspace = true
tempfile.workspace = true
