[package]
name = "chatcommons-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
hex.workspace = true
chatcommons-crypto = { path = "../crypto" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chatcommons-crypto = { path = "../crypto" }
