[package]
name = "chatcommons-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chatcommons-protocol = { path = "../protocol" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chatcommons-crypto = { path = "../crypto" }
tempfile.workspace = true
